@@ -5,7 +5,7 @@ use English;
 use Error::Pure::Utils qw(clean);
 use File::Object;
 use SGML::PYX;
-use Test::More 'tests' => 26;
+use Test::More 'tests' => 27;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -382,4 +382,19 @@ stdout_is(
 	},
 	$right_ret,
 	'Test element with attribute which has value with space.',
+);
+
+# Test.
+$obj = SGML::PYX->new;
+$right_ret = <<'END';
+(element
+Aattr štědře
+END
+stdout_is(
+	sub {
+		$obj->parsefile($data_dir->file('start_element26.sgml')->s);
+		return;
+	},
+	$right_ret,
+	'Test element with attribute which has UTF-8 value.',
 );
